--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">cayicons</string>
+    <string name="app_name">cayicons---lawnchair自适应主题色图标包</string>
     <string name="search_bar_hint">搜索（没卵用） %d 图标</string>
     <string name="acknowledgements">Acknowledgements</string>
     <string name="about">关于</string>
@@ -8,6 +8,6 @@
     <string name="see_all_contributors">lawnicons所有贡献者</string>
     <string name="contributors">Contributors</string>
     <string name="special_thanks">感谢</string>
-    <string name="special_thanks_icon">项目来源lawnicons</string>
+    <string name="special_thanks_icon">项目来源</string>
     <string name="special_thanks_name">For naming the app.</string>
 </resources>
